--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -4,7 +4,6 @@ applications:
   host: timesheets-pal-sat-hind
   memory: 1G
   instances: 1
-  env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-sat-hind.apps.evans.pal.pivotal.io
   services:
   - tracker-timesheets-database
+  - tracker-service-registry
