--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -4,5 +4,6 @@ applications:
   host: allocations-pal-sat-hind
   memory: 1G
   instances: 1
- services:
+  services:
   - tracker-allocations-database
+  - tracker-service-registry
